# diasca-exchange

./: .gitignore  ARCHITECTURE_EVOLUTION.md  LICENSE  README.md
docs/: design_principles.md  lessons_from_recent_implementations.md  open_questions.md
exchange_profiles/eudr/: eudr_profile.dbml  eudr_profile.md
geojson-validator/: .gitignore
geojson-validator/src/: __init__.py  geojson_validator.py
geojson-validator/tests/: test_geojson_validator.py
geojson-validator/tests/data/: central_park.geojson
sql/: diasca-schema.mysql.sql
tools/geojson-validator/: .pre-commit-config.yaml  README.md  pyproject.toml
tools/geojson-validator/.github/workflows/: pull-request.yml
tools/geojson-validator/docs/: geojson-template-spec.md
v1_original_model/dbml/: diasca-model.dbml
v1_original_model/spec/: er-spec.md
v1_original_model/sql/: diasca-schema.psql.sql
v2_semantic_core/: semantic_core.dbml  semantic_core.md  semantic_core.sql
